reset automatic row height flag after import, fdo#59193

Change-Id: Ied9cb4a2b6a17d8c7b65f4fec3cb17219a5afa5b